# concaten

./: .gitattributes  .gitignore  .tokenizer.c.swp  CMakeLists.txt  CODE_STYLE.md  README.md  callable.h  code_block.c  code_block.h  ctn_object.c  ctn_object.h  ctno_ctors.c  ctno_ctors.h  data_stack.c  data_stack.h  demo.ctn  error.c  error.h  errors.c  errors.h  main.c  method_map.c  method_map.h  object.c  object.h  prop_map.c  prop_map.h  runnable.c  runnable.h  scope_stack.c  scope_stack.h  stacks.h  stl.c  stl.h  stringbuilder.c  stringbuilder.h  test.c  test.ctn  test.h  tests.h  (+8 more)
docs/: GLOSSARY.md  README.md
stl/: GLOBALS.md  INTEGRAL.md  REAL.md  STRING.md  globals.c  globals.h  integral.c  integral.h  real.c  string.c  string.h
test/: data_stack.c  method_map.c  object.c  prop_map.c  token_stack.c  tokenizer.c
tests/: code_block.c  data_stack.c  method_map.c  object.c  prop_map.c  runnable.c  scope_stack.c  stringbuilder.c  tft.ctn  tkn_value_func.c  token_stack.c  tokenizer.c  type.c
